--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
-Riot_test/Library/AnnotationManager
+Riot_test/Assemblu-CSharp-Editor.csproj
+Riot_test/Assemblu-CSharp.csproj
+Riot_test/Library/
+Riot_test/Temp/
